<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kes" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:text="@string/convert_currency"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <RadioGroup
        android:id="@+id/curr_options"
        android:layout_marginStart="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <RadioButton
            android:id="@+id/USD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usd"
            android:checked="true"
            android:textSize="16sp" />
        <RadioButton
            android:id="@+id/EUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eur"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/JPY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jpy"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/GBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gbp"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/CHF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chf"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/CAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cad"
            android:textSize="16sp"/>
        <RadioButton
            android:id="@+id/ZAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zar"
            android:textSize="16sp"/>


        <!-- add RadioButtons here -->

    </RadioGroup>

    <TextView
        android:id="@+id/rateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="50dp"
        android:text="@string/rate"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/rateText"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curr_options" />


    <TextView
        android:id="@+id/rateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:text="TextView"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curr_options" />

    <TextView
        android:id="@+id/convertedCurr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/converted_curr"
        android:visibility="invisible"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rateText"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/convertBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/convert"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertedCurr" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>